# adivarai

./: .env.example  .gitignore  PAYMENTS.md  README.md  SPEC.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
agent/: README.md  package-lock.json  package.json  tsconfig.json
agent/src/: bridge-client.ts  cli.ts  config.ts  daemon.ts  detector.test.ts  detector.ts  hooks.ts  wrapper.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/advertiser/: page.tsx
app/earner/: page.tsx
app/login/: page.tsx
app/surface/: page.tsx
components/: AdPlayer.tsx  CampaignCard.tsx  CreateCampaign.tsx  Nav.tsx
components/ad/: AdShell.tsx  AdStage.tsx  EarningsMeter.tsx
convex/: ads.ts  advertisers.ts  auth.ts  campaigns.ts  crons.ts  earnings.ts  lib.ts  schema.ts
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
lib/: desktop.ts  format.ts  useAgentBridge.ts  useWatchable.ts
