[package]
name = "adivari-desktop"
version = "0.1.0"
description = "Adivari desktop ad surface"
edition = "2021"
rust-version = "1.77"

[lib]
name = "adivari_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
